--- a/frontend/home.html
+++ b/frontend/home.html
@@ -155,8 +155,17 @@
     <div id="aboutUsModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>About Us</h2>
-            <p>We provide AI-powered UI/UX generation from sketches...</p>
+            <h2>Overview</h2>
+            <p>Gen UIX is an intelligent UI/UX generator that transforms sketches into fully designed user interfaces tailored to your product goals and audience.</p>
+            <h2>Mission Statement</h2>
+            <p>Our mission is to empower developers and designers by streamlining the UI/UX creation process using the power of AI.</p>
+            <h2>Key Features</h2>
+            <p>
+                AI-generated UI from sketches.</br>
+                User-customized design based on demographics.</br>
+                Fast and downloadable outputs.</br>
+                Database-backed personalization.</br>
+            </p>
         </div>
     </div>
 
@@ -168,7 +177,8 @@
             <ul>
                 <li>Upload your sketch.</li></br>
                 <li>Select target audience and preferences.</li></br>
-                <li>Click 'Generate UI's' and review your results.</li>
+                <li>Click 'Generate UI's' and review your results.</li></br>
+                <li>For another iteration click 'refresh' and start from begining</li>
             </ul>
         </div>
     </div>
@@ -179,4 +189,4 @@
 </body>
 </html>
  
-<!--http://localhost:8001/outputs/generated_ui0.png-->
+<!--http://localhost:8002/outputs/generated_ui0.png-->
